add mange techinician , manage organization